--- a/package.json
+++ b/package.json
@@ -7,18 +7,27 @@
     "serve": "vite preview"
   },
   "dependencies": {
-    "firebase": "^8.7.1",
-    "vue": "^3.0.5",
+    "ant-design-vue": "^2.2.6",
     "axios": "^0.21.1",
     "dayjs": "^1.10.6",
+    "firebase": "^8.7.1",
+    "js-sha256": "^0.9.0",
+    "masonry-layout": "^4.2.2",
+    "moment": "^2.29.1",
     "sass": "^1.35.1",
+    "vite-plugin-components": "^0.13.2",
+    "vite-svg-loader": "^2.2.0",
+    "vue": "^3.0.5",
     "vue-meditor": "^2.1.1",
-    "vue-router": "^4.0.10"
+    "vue-router": "^4.0.10",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^1.2.5",
     "@vue/compiler-sfc": "^3.0.5",
     "fireauth": "^1.0.4",
-    "vite": "^2.4.2"
+    "vite": "^2.4.2",
+    "vue-svg-loader": "^0.16.0",
+    "vue-template-compiler": "^2.6.14"
   }
 }
